CIR-I3715 | alignment issue fixed

--- a/src/components/commonCss/style.scss
+++ b/src/components/commonCss/style.scss
@@ -8885,3 +8885,7 @@ table.group-process-table {
     position: absolute;
   }
 }
+
+.pie-chart-container {
+  height: 30px;
+}
